<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="radiobutton.danieltilley.ie.radiobutton.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#eb873b">

    <TextView
        android:id="@+id/titleId"
        android:text="@string/titleName"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radioGroupId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleId"
        android:layout_marginTop="25dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/yesButtonId"
            android:text="@string/positiveChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/noButtonId"
            android:text="@string/negativeChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/maybeButtonId"
            android:text="@string/thirdChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/showButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/radioGroupId"
        android:layout_marginTop="25dp"
        android:text="@string/showButtonText"
        />

    <TextView
        android:id="@+id/showTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showButtonId"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/textViewChoice"/>
</RelativeLayout>
